--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
@@ -5,173 +5,175 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="End Hire" Height="472" Width="500" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
-    <Grid>
-        <Button x:Name="btnNext"
+        Title="End Hire" Height="511" Width="641" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+    <Border Margin="72,0,69,27" BorderThickness="3,3,3,3" BorderBrush="#FF1C6DD0" CornerRadius="15,15,15,15" Background="#FFEEF6FF" Height="435" VerticalAlignment="Bottom">
+        <Grid Margin="59,27,61,17">
+            <Button x:Name="btnNext"
                              
-            BorderThickness="0"
-            Content="Next"
-            Foreground="Black"
-            FontSize="12"
-            FontFamily="MonteSerrat"
-            Cursor="Hand"
-            Click="btnSubmit_Click" Margin="262,320,-10,-10">
-            <Button.Style>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Background" Value="#71A4E1"/>
-                    <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#FF0351AF"/>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </Button.Style>
+                BorderThickness="0"
+                Content="Next"
+                Foreground="Black"
+                FontSize="12"
+                FontFamily="MonteSerrat"
+                Cursor="Hand"
+                Click="btnSubmit_Click" Margin="0,0,-7,1" Height="53" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="175">
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="#71A4E1"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF0351AF"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
 
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Width="150" Height="40"
-                        CornerRadius="20"
-                        Background="{TemplateBinding Background}">
-                        <ContentPresenter VerticalAlignment="Center"
-                            HorizontalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
-        <Button x:Name="btnClear"
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="150" Height="40"
+                            CornerRadius="20"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+            <Button x:Name="btnClear"
                              
-            BorderThickness="0"
-            Content="Clear"
-            Foreground="White"
-            FontSize="12"
-            FontFamily="MonteSerrat"
-            Cursor="Hand"
-            Click="btnClear_Click" Margin="-9,320,261,-10">
-            <Button.Style>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Background" Value="Red"/>
-                    <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="Orange"/>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </Button.Style>
+                BorderThickness="0"
+                Content="Clear"
+                Foreground="White"
+                FontSize="12"
+                FontFamily="MonteSerrat"
+                Cursor="Hand"
+                Click="btnClear_Click" Margin="0,0,198,3" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="177">
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="Red"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Orange"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
 
-            <Button.Template>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Width="150" Height="40"
-                        CornerRadius="20"
-                        Background="{TemplateBinding Background}">
-                        <ContentPresenter VerticalAlignment="Center"
-                            HorizontalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
-        <TextBlock
-            FontSize="10"
-            Foreground="Black"
-            FontWeight="ExtraBold"
-            FontFamily="Century Gothic"
-        Margin="90,69,164,371"><Run Language="en-gb" Text="Hire ID"/></TextBlock>
-        <Border CornerRadius="15"  
-            BorderBrush="Black" 
-            BorderThickness="2" 
-        Margin="86,82,86,337"
-                    >
-            <TextBox x:Name="HireIDtxt"
-                FontSize="15"
-                FontWeight="Medium"
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="150" Height="40"
+                            CornerRadius="20"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+            <TextBlock
+                FontSize="12"
+                Foreground="#FF1C6DD0"
+                FontWeight="Bold"
                 FontFamily="Montserrat"
-                Foreground="Black"
-                CaretBrush="Gray"
-                BorderBrush="{x:Null}"
-                BorderThickness="0,0,0,1" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" Height="37" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
+                Margin="0,0,94,322" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="Hire ID"/></TextBlock>
+            <Border CornerRadius="15"  
+                BorderBrush="Black" 
+                BorderThickness="2" 
+                Margin="0,63,25,0" Background="White" Height="37" VerticalAlignment="Top" HorizontalAlignment="Right" Width="328"
+                    >
+                <TextBox x:Name="HireIDtxt"
+                    FontSize="15"
+                    FontWeight="Medium"
+                    FontFamily="Century Gothic"
+                    Foreground="Black"
+                    CaretBrush="Gray"
+                    BorderBrush="{x:Null}"
+                    BorderThickness="0,0,0,1" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" Height="37" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
                              />
 
 
 
 
-        </Border>
-        <TextBlock
-            FontSize="10"
-            Foreground="Black"
-            FontWeight="ExtraBold"
-            FontFamily="Century Gothic"
-            Margin="90,135,164,305"><Run Language="en-gb" Text="Return Date"/></TextBlock>
-        <Border CornerRadius="15"  
-            BorderBrush="Black" 
-            BorderThickness="2" 
-            Margin="86,150,86,269"
-                    >
-            <DatePicker x:Name="ReturnDate" Width="308" Background="{x:Null}" BorderBrush="{x:Null}" SelectedDateFormat="Short" FirstDayOfWeek="Monday" Foreground="Black" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Padding="8,3,1,0" Height="26" Margin="0,0,8,0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-        </Border>
-        <TextBlock
-            FontSize="10"
-            Foreground="Black"
-            FontWeight="ExtraBold"
-            FontFamily="Century Gothic"
-            Margin="89,204,165,236"><Run Language="en-gb" Text="End Milage"/></TextBlock>
-        <Border CornerRadius="15"  
-            BorderBrush="Black" 
-            BorderThickness="2" 
-            Margin="86,218,86,202"
-                    >
-            <TextBox x:Name="EndMilatxt"
-                FontSize="15"
-                FontWeight="Medium"
+            </Border>
+            <TextBlock
+                FontSize="12"
+                Foreground="#FF1C6DD0"
+                FontWeight="Bold"
                 FontFamily="Montserrat"
-                Foreground="Black"
-                CaretBrush="Gray"
-                BorderBrush="{x:Null}"
-                BorderThickness="0,0,0,1" Height="36" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
+                Margin="0,0,95,255" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="Return Date"/></TextBlock>
+            <Border CornerRadius="15"  
+                BorderBrush="Black" 
+                BorderThickness="2" 
+                Margin="0,130,25,0" Background="White" Height="37" VerticalAlignment="Top" HorizontalAlignment="Right" Width="328"
+                    >
+                <DatePicker x:Name="ReturnDate" Width="308" Background="{x:Null}" BorderBrush="{x:Null}" SelectedDateFormat="Short" FirstDayOfWeek="Monday" Foreground="Black" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Padding="8,3,1,0" Height="26" Margin="0,0,8,0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            </Border>
+            <TextBlock
+                FontSize="12"
+                Foreground="#FF1C6DD0"
+                FontWeight="Bold"
+                FontFamily="Montserrat"
+                Margin="0,0,95,186" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="End Milage"/></TextBlock>
+            <Border CornerRadius="15"  
+                BorderBrush="Black" 
+                BorderThickness="2" 
+                Margin="0,199,25,0" Background="White" Height="36" VerticalAlignment="Top" HorizontalAlignment="Right" Width="328"
+                    >
+                <TextBox x:Name="EndMilatxt"
+                    FontSize="15"
+                    FontWeight="Medium"
+                    FontFamily="Century Gothic"
+                    Foreground="Black"
+                    CaretBrush="Gray"
+                    BorderBrush="{x:Null}"
+                    BorderThickness="0,0,0,1" Height="36" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
                              />
 
 
 
 
-        </Border>
-        <TextBlock
-            TextAlignment="Center"
-            FontSize="15"
-            Foreground="#71A4E1"
-            FontWeight="ExtraBold"
-            FontFamily="Century Gothic"
-    Margin="140,19,114,417"><Run Language="en-gb" Text="Enter Details"/></TextBlock>
-        <TextBlock
-            FontSize="10"
-            Foreground="Black"
-            FontWeight="ExtraBold"
-            FontFamily="Century Gothic"
-            Margin="92,270,162,156" RenderTransformOrigin="0.5,0.5">
-            <TextBlock.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleY="1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </TextBlock.RenderTransform><Run Language="en-gb" Text="Damage Fee"/></TextBlock>
-        <Border CornerRadius="15"  
-            BorderBrush="Black" 
-            BorderThickness="2" 
-            Margin="86,284,86,138"
-                    >
-            <TextBox x:Name="DFeeTxt"
-                FontSize="15"
-                FontWeight="Medium"
-                FontFamily="Montserrat"
+            </Border>
+            <TextBlock
+                TextAlignment="Center"
+                FontSize="17"
                 Foreground="Black"
-                CaretBrush="Gray"
-                BorderBrush="{x:Null}"
-                BorderThickness="0,0,0,1" Height="34" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
+                FontWeight="Bold"
+                FontFamily="Montserrat"
+                Margin="0,0,58,356" Text="End Hire Form" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246"/>
+            <TextBlock
+                FontSize="12"
+                Foreground="#FF1C6DD0"
+                FontWeight="Bold"
+                FontFamily="Montserrat"
+                Margin="0,0,95,117" RenderTransformOrigin="0.5,0.5" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="246">
+                <TextBlock.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleY="1"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </TextBlock.RenderTransform><Run Language="en-gb" Text="Damage Fee"/></TextBlock>
+            <Border CornerRadius="15"  
+                BorderBrush="Black" 
+                BorderThickness="2" 
+                Margin="0,268,25,0" Background="White" Height="34" VerticalAlignment="Top" HorizontalAlignment="Right" Width="328"
+                    >
+                <TextBox x:Name="DFeeTxt"
+                    FontSize="15"
+                    FontWeight="Medium"
+                    FontFamily="Century Gothic"
+                    Foreground="Black"
+                    CaretBrush="Gray"
+                    BorderBrush="{x:Null}"
+                    BorderThickness="0,0,0,1" Height="34" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
                              />
 
 
 
 
-        </Border>
+            </Border>
 
-    </Grid>
+        </Grid>
+    </Border>
 </Window>
