--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Login.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Login.xaml
@@ -5,48 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="Login" Height="450" Width="800">
-    <Border  CornerRadius="15"  BorderBrush="#71A4E1" BorderThickness="3" HorizontalAlignment="Center" Height="343" Grid.Row="1" VerticalAlignment="Top" Width="316" Margin="0,57,0,0">
-        <StackPanel Width="250"
-                    Grid.Row="2"
-                    Orientation="Vertical"
-                    Margin="30,17,30,18">
+        Title="Login" Height="580" Width="1000" WindowStartupLocation="CenterScreen">
 
-            <Image Source="C:\Users\lenovo\Documents\GitHub\CSharp-GroupProject\VehicleRentalSystem V1.0\VehicleRentalSystem V1.0\Icon.png"
-                   Width="90" Height="74"/>
+    <Border  CornerRadius="15"  BorderBrush="#FF1C6DD0" BorderThickness="3" Grid.Row="1" Margin="0,100,0,0" HorizontalAlignment="Center" Width="336" Height="364" VerticalAlignment="Top">
+        <Grid
+            Margin="7,7,7,-3"
+            Grid.Row="2" >
+
+            <Image Source="C:\NSBM\1st Year\Semester 03\OOP with C#\Group Project\CSharp-GroupProject\VehicleRentalSystem V1.0\VehicleRentalSystem V1.0\Icon.png"
+                   Margin="73,-4,73,244"/>
 
 
             <TextBlock Text="Username"
-                               FontSize="10"
-                               Foreground="Black"
-                               FontWeight="ExtraBold"
-                               FontFamily="Century Gothic"
-                               Margin="0,0,0,0" Width="246"/>
+                Foreground="#FF1C6DD0"
+                FontWeight="Bold"
+                FontFamily="Montserrat"
+                Margin="38,102,159,226"/>
 
             <Border CornerRadius="15"  
-                    BorderBrush="Black" 
-                    BorderThickness="2" 
-                    HorizontalAlignment="Center" 
-                    Height="41" Grid.Row="1" 
-                    Width="250"
-                    Margin="0,10,0,0"
+                BorderBrush="Black" 
+                BorderThickness="2"
+                Margin="25,121,40,196"
                     >
                 <TextBox x:Name="txtUser"
-                             FontSize="15"
-                             TextAlignment="Center"
-                             FontWeight="Medium"
-                             FontFamily="Montserrat"
-                             Foreground="Black"
-                             CaretBrush="Gray"
-                             BorderBrush="White"
-                             BorderThickness="0,0,0,1"
-                             Margin="8,8,8,8"
-                              Padding="30,0,0,0">
+                    FontSize="12"
+                    TextAlignment="Left"
+                    FontWeight="Medium"
+                    FontFamily="Century Gothic"
+                    Foreground="Black"
+                    CaretBrush="Gray"
+                    BorderBrush="White"
+                    BorderThickness="0,0,0,1"
+                    Padding="30,0,0,0" Margin="0,0,8,0" HorizontalAlignment="Right" Width="229" Height="17" VerticalAlignment="Center">
                     <TextBox.Background>
                         <ImageBrush ImageSource="/Icons/user.png"
 
-                                        Stretch="Uniform"
-                                        AlignmentX="Left"
+                            Stretch="Uniform"
+                            AlignmentX="Left"
                                         />
 
                     </TextBox.Background>
@@ -60,39 +55,36 @@
 
 
             <TextBlock Text="Password"
-                               FontSize="10"
-                               Foreground="Black"
-                               FontWeight="ExtraBold"
-                               FontFamily="Century Gothic"
-                               Margin="0,10,0,0"/>
+                Foreground="#FF1C6DD0"
+                FontWeight="Bold"
+                FontFamily="Montserrat"
+                Margin="38,185,181,147"/>
 
             <Border CornerRadius="15"  
-                    BorderBrush="Black" 
-                    BorderThickness="2" 
-                    HorizontalAlignment="Center" 
-                    Height="41" Grid.Row="1" 
-                    Width="250"
-                    Margin="0,10,0,0"
+                BorderBrush="Black" 
+                BorderThickness="2" 
+                HorizontalAlignment="Left" 
+                Width="251"
+                Margin="25,204,0,114"
                     >
 
                 <PasswordBox   x:Name="txtPass"
-                              FontSize="7"
+                    FontSize="10"
                             
-                              FontWeight="ExtraBold"
-                              FontFamily="Century Gothic"
+                    FontWeight="Bold"
+                    FontFamily="Century Gothic"
                              
-                             Foreground="White"
-                             CaretBrush="LightGray"
-                             BorderBrush="DarkGray"
-                             BorderThickness="0,0,0,1"
-                              Margin="0,5,0,0"
-                             Height="19"
-                             Padding="30,0,0,0">
+                    Foreground="Black"
+                    CaretBrush="Gray"
+                    BorderBrush="White"
+                    BorderThickness="0,0,0,0"
+                    Margin="10,0,0,0"
+                    Padding="30,0,0,0" Height="16" VerticalAlignment="Center" HorizontalAlignment="Left" Width="229">
                     <PasswordBox.Background>
                         <ImageBrush ImageSource="/Icons/password.png" 
 
-                                        Stretch="Uniform"
-                                        AlignmentX="Left"
+                            Stretch="Uniform"
+                            AlignmentX="Left"
                                         />
 
                     </PasswordBox.Background>
@@ -108,55 +100,47 @@
 
             <Button x:Name="btnSubmit"
                              
-                            BorderThickness="0"
-                            Content="Login"
-                            Foreground="White"
-                            FontSize="12"
-                            FontFamily="MonteSerrat"
-                            Cursor="Hand"
-                            Grid.Column="2"
-                            Margin="0,20,0,0"
-                            Click="btnLogin_Click" Height="44" Width="249">
+                BorderThickness="0"
+                Content="Login"
+                Foreground="Black"
+                FontSize="12"
+                FontFamily="MonteSerrat"
+                FontWeight="SemiBold"
+                Cursor="Hand"
+                Margin="0,256,77,0"
+                Click="btnLogin_Click" Height="58" VerticalAlignment="Top" HorizontalAlignment="Right" Width="162">
                 <Button.Style>
-                    <Style TargetType="Button">
-                        <Setter Property="Background" Value="#71A4E1"/>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="#FF7AB3EF"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#FF11E1E1"/>
+                                <Setter Property="Background" Value="#FF1C6DD0"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
                 </Button.Style>
 
                 <Button.Template>
-                    <ControlTemplate TargetType="Button">
+                    <ControlTemplate TargetType="{x:Type Button}">
                         <Border Width="150" Height="40"
-                                        CornerRadius="20"
-                                        Background="{TemplateBinding Background}">
+                            CornerRadius="20"
+                            Background="{TemplateBinding Background}">
                             <ContentPresenter VerticalAlignment="Center"
-                                                      HorizontalAlignment="Center"/>
+                                HorizontalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
             </Button>
 
-            <StackPanel Orientation="Horizontal"
-                                Margin="0,10,0,0"
-                                HorizontalAlignment="Right" >
-                <TextBlock Text=" Forgot Password? "
-                               FontSize="7"
-                               Foreground="Red"
-                               FontWeight="Medium"
-                               FontFamily="Montserrat"
-                               Cursor="Hand"
-                               />
 
-            </StackPanel>
+            <TextBlock Text="Contact IT for Support"
+                Foreground="Black"
+                FontFamily="Montserrat"
+                Margin="205,314,-8,14" FontSize="10" FontWeight="Bold"/>
 
 
 
-
-        </StackPanel>
+        </Grid>
 
 
     </Border>
