--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="Vehicle Rental System V1.0" Height="580" Width="1000" Icon="/Icon.png" WindowStartupLocation="CenterScreen" Activated="MainWindow_Activated">
+        Title="Vehicle Rental System V1.0" Height="580" Width="1000" Icon="/Icon.png" WindowStartupLocation="CenterScreen" Activated="MainWindow_Activated" Background="#FFEEF6FF">
 
     <Window.Resources>
         <Style TargetType="ToggleButton">
@@ -40,17 +40,17 @@
             <ColumnDefinition Width="91*"/>
             <ColumnDefinition Width="309*"/>
         </Grid.ColumnDefinitions>
-        <DockPanel x:Name="CategoryPanel" LastChildFill="False" Width="200" Background="#FFDEECFB" Grid.RowSpan="2" HorizontalAlignment="Left">
+        <DockPanel x:Name="CategoryPanel" LastChildFill="False" Width="200" Background="#FFBEDAF7" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="0,0,0,7">
             <Rectangle DockPanel.Dock="Top" Height="130">
                 <Rectangle.Fill>
                     <ImageBrush ImageSource="/Asset 1.png" Stretch="UniformToFill"/>
                 </Rectangle.Fill>
             </Rectangle>
-            <RadioButton x:Name="BookingsBtn" Content="BOOKINGS&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF7AB3EF" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Century Gothic" FontWeight="DemiBold" Checked="BookingsBtn_Checked" Click="Button_Click" Height="50" Margin="5,5,5,5"/>
-            <RadioButton x:Name="DetailsBtn" Content="DETAILS&#x9;&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF7AB3EF" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Century Gothic" FontWeight="DemiBold" Checked="DetailsBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,5"/>
-            <RadioButton x:Name="VehiclesBtn" Content="VEHICLES&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF7AB3EF" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Century Gothic" FontWeight="DemiBold" Checked="VehiclesBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,5"/>
-            <RadioButton x:Name="DriversBtn" Content="DRIVERS&#x9;&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF7AB3EF" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Century Gothic" FontWeight="DemiBold" Checked="DriversBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,5"/>
-            <RadioButton x:Name="AdminBtn" Content="ADMIN&#x9;&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF7AB3EF" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Century Gothic" FontWeight="DemiBold" Checked="AdminBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,4"/>
+            <RadioButton x:Name="BookingsBtn" Content="BOOKINGS&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF368CE7" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Montserrat" FontWeight="DemiBold" Checked="BookingsBtn_Checked" Click="Button_Click" Height="50" Margin="5,5,5,5"/>
+            <RadioButton x:Name="DetailsBtn" Content=" DETAILS&#x9; &gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF368CE7" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Montserrat" FontWeight="DemiBold" Checked="DetailsBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,5"/>
+            <RadioButton x:Name="VehiclesBtn" Content="VEHICLES&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF368CE7" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Montserrat" FontWeight="DemiBold" Checked="VehiclesBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,5"/>
+            <RadioButton x:Name="DriversBtn" Content="DRIVERS             &gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF368CE7" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Montserrat" FontWeight="DemiBold" Checked="DriversBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,5"/>
+            <RadioButton x:Name="AdminBtn" Content="ADMIN&#x9;&#x9;&gt;" Style="{StaticResource {x:Type ToggleButton}}" DockPanel.Dock="Top" Background="#FF368CE7" BorderBrush="{x:Null}" GroupName="Category" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0,0,0,0" FontFamily="Montserrat" FontWeight="DemiBold" Checked="AdminBtn_Checked" Click="Button_Click" Height="50" Margin="5,0,5,4"/>
         </DockPanel>
         <local:BookingsUC x:Name="BookingUC" Grid.ColumnSpan="2" Grid.RowSpan="2" Margin="180,0,0,0" Visibility="Hidden"/>
         <local:VehicleUC x:Name="VehicleUC" RenderTransformOrigin="0.5,0.5" Margin="180,0,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" Visibility="Hidden">
@@ -67,5 +67,10 @@
         <local:AdminUC x:Name="AdminUC" Grid.RowSpan="2" Margin="180,0,0,0" Grid.ColumnSpan="2" Visibility="Hidden"/>
         <local:DetailsUC x:Name="DetailsUC___Search" VerticalAlignment="Top" Grid.RowSpan="2" Height="434" RenderTransformOrigin="0.504,0.495" Margin="172,-34,10,0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Visibility="Hidden"/>
         <local:DetailsDataCus x:Name="DetailsDataGrid" Width="4000" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="205,70,0,0" VerticalAlignment="Top" Height="4000" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" Loaded="DetailsDataGrid_Loaded" Visibility="Hidden"/>
+        <Grid HorizontalAlignment="Left" Height="73" Margin="0,0,0,3" Grid.Row="1" VerticalAlignment="Bottom" Width="209">
+            <Rectangle Height="67" Stroke="#FF368CE7" Width="200" StrokeThickness="3" Fill="#FFEEF6FF" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Label x:Name="EMPName" Content="J.A.K.Jayawardana" Margin="34,10,18,32" Foreground="#FF368CE7" FontWeight="SemiBold" FontFamily="Montserrat" FontSize="13"/>
+            <Label x:Name="EMPID" Content="ID - 700134" Height="27" Margin="58,36,24,10" Width="127" Foreground="#FF041562" FontWeight="SemiBold" FontFamily="Montserrat" FontSize="13"/>
+        </Grid>
     </Grid>
 </Window>
