--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Manage Employee.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Manage Employee.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VehicleRentalSystem_V1._0.Manage_Employee"
+﻿<Window x:Name="txtO_" x:Class="VehicleRentalSystem_V1._0.Manage_Employee"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
