--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Login.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Login.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="Login" Height="580" Width="1000" WindowStartupLocation="CenterScreen">
+        Title="Login" Height="580" Width="1000" WindowStartupLocation="CenterScreen" Background="#FFEEF6FF">
 
-    <Border  CornerRadius="15"  BorderBrush="#FF1C6DD0" BorderThickness="3" Grid.Row="1" Margin="0,100,0,0" HorizontalAlignment="Center" Width="336" Height="364" VerticalAlignment="Top">
+    <Border  CornerRadius="15"  BorderBrush="#FF1C6DD0" BorderThickness="3" Grid.Row="1" Margin="0,100,0,0" HorizontalAlignment="Center" Width="336" Height="364" VerticalAlignment="Top" Background="White">
         <Grid
             Margin="7,7,7,-3"
             Grid.Row="2" >
@@ -20,12 +20,12 @@
                 Foreground="#FF1C6DD0"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="38,102,159,233"/>
+                Margin="39,123,158,212"/>
 
             <Border CornerRadius="15"  
                 BorderBrush="Black" 
                 BorderThickness="2"
-                Margin="25,121,40,196"
+                Margin="24,140,41,177"
                     >
                 <TextBox x:Name="txtUser"
                     FontSize="12"
@@ -58,14 +58,14 @@
                 Foreground="#FF1C6DD0"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="38,175,181,161"/>
+                Margin="38,187,181,149"/>
 
             <Border CornerRadius="15"  
                 BorderBrush="Black" 
                 BorderThickness="2" 
                 HorizontalAlignment="Left" 
                 Width="251"
-                Margin="25,193,0,125"
+                Margin="24,204,0,114"
                     >
 
                 <PasswordBox   x:Name="txtPass"
@@ -107,8 +107,8 @@
                 FontFamily="MonteSerrat"
                 FontWeight="SemiBold"
                 Cursor="Hand"
-                Margin="74,245,0,0"
-                Click="btnLogin_Click" Height="58" VerticalAlignment="Top" HorizontalAlignment="Left" Width="162">
+                Margin="74,255,80,41"
+                Click="btnLogin_Click">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}">
                         <Setter Property="Background" Value="#FF7AB3EF"/>
@@ -136,7 +136,11 @@
             <TextBlock Text="*Contact IT for Support"
                 Foreground="Red"
                 FontFamily="Montserrat"
-                Margin="189,316,-1,12" FontSize="10" FontWeight="Bold"/>
+                Margin="179,324,9,4" FontSize="10" FontWeight="Bold"/>
+            <TextBlock Text="AMARASINGHE TARVELS"
+                Foreground="#FF00B3FF"
+                FontFamily="Comic Sans MS"
+                Margin="80,74,80,261" FontWeight="Medium"/>
 
 
 
